--- a/assets/style/index-1.css
+++ b/assets/style/index-1.css
@@ -23,13 +23,14 @@ header {
 header .flex {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     line-height: 100px;
 }
 
 /*TITLE*/
 
 .title {
-    overflow:auto
+    overflow: auto;
 }
 
 .title a img {
@@ -62,7 +63,7 @@ nav ul li {
 
 nav ul li a {
     margin: 0;
-    padding: 0;
+    padding: 0 10px;
     color: #999999;
     font-size: 14.5px;
     font-weight: 400;
@@ -87,7 +88,7 @@ nav ul li + li {
     line-height: 70px;
 }
 
-.menu  {
+.menu {
     display: none;
     line-height: 100px;
 }
@@ -119,13 +120,16 @@ nav ul li + li {
 }
 
 @media (max-width: 768px) {
-    nav ul li a { 
+    nav ul {
         display: none;
     }
 
     .menu {
         display: block;
-        transition: all 1s ease-in-out;
+    }
+
+    .title p {
+        font-size: 16px;
     }
 }
 
@@ -136,11 +140,10 @@ nav ul li + li {
 .box-1 {
     display: flex;
     flex-wrap: wrap;
+    padding-top: 40px;
     gap: 20px;
-    margin-top: 40px;
     width: 100%;
-    height: 500px;
-
+    height: 100dvh;
 }
 
 .half {
@@ -150,24 +153,27 @@ nav ul li + li {
 }
 
 @media (max-width: 768px) {
-    .half { width: 100%; }
-    
+    .box-1 {
+        display: block;
+    }
+
+    .half {
+        width: 100%;
+    }
 }
 
 /*FIRST*/
 
 .text-1 h1 {
-    margin-top: 10px;
+    padding-top: 10px;
     font-size: 59px;
     font-weight: 700;
     color: #000;
-    line-height: 70px;
-
-
+    line-height: 65px;
 }
 
 .button {
-    margin-top: 100px;
+    margin-top: 50px;
     width: 230px;
     height: 60px;
     background-color: #000;
@@ -184,12 +190,11 @@ nav ul li + li {
 
 .img-box {
     padding: 0;
-    margin: 60px 0 0 150px;
+    margin: 0px 0 0 150px;
     background-image: url(../images/me/avatar.png);
     background-repeat: no-repeat;
     width: 450px;
     height: 400px;
-    
 }
 
 .down {
@@ -217,7 +222,7 @@ nav ul li + li {
     color: #ffffff;
     background-color: #262626;
     width: 100%;
-    height: 640px;
+    height: 100dvh;
     padding: 5rem;
     padding-bottom: 0;
 }
@@ -226,73 +231,92 @@ nav ul li + li {
     background-image: url('../images/me/me-cutout-gray.png');
     background-position: center;
     background-size: cover;
-    height: 15rem;
-    width: 15rem;
+    height: 20rem;
+    width: 20rem;
     border: 0;
     border-radius: 1rem;
-    margin-right: 5rem;
-    margin-top: 1rem;
-    margin-left: 12.5%;
+    margin:1rem 5rem 0 1rem;
     position: relative;
     float: left;
 }
-  
+
 #about .aboutme {
-    height: 20rem;
+    height: auto;
     width: 90%;
 }
-  
+
 .about-txt {
     margin-bottom: 1.6rem;
 }
-  
+
 .aboutme h2 {
     font-weight: bold;
     font-size: 2rem;
     margin-bottom: 0.8rem;
 }
-  
+
 .about-list i {
     margin-right: 0.5rem;
     margin-bottom: 1rem;
 }
-  
+
 .about-list ul:first-child {
     float: left;
-  }
-  
- /* ---------------------------- */
+}
+
+@media (max-width: 768px) {
+    #about{
+        height: auto;
+    }
+
+    #about .photo {
+        float: none;
+        margin: 0 auto 2rem;
+    }
+
+    #about .aboutme {
+        width: 100%;
+        text-align: center;
+    }
+
+    .about-list ul {
+        float: none;
+        text-align: left;
+    }
+}
+
+/* ---------------------------- */
 /* Contact me                   */
 /* ---------------------------- */
 
 #contact {
     background-color: #eeeeee;
     width: 100%;
-    height:500px;
+    height: 500px;
     color: #000000;
     padding: 3rem;
     padding-left: 12.5%;
     padding-bottom: 7rem;
-  }
-  
-  #contact h2 {
+}
+
+#contact h2 {
     font-weight: bold;
     font-size: 2rem;
     margin-bottom: 1rem;
-  }
-  
-  #contact form {
+}
+
+#contact form {
     float: left;
     margin-right: 5rem;
-  }
-  
-  form {
+}
+
+form {
     margin-top: 1rem;
     width: 45%; 
     text-align: right;
-  }
-  
-  input[type=text] {
+}
+
+input[type=text] {
     width: 100%;
     height: 48px;
     padding: 0 15px;
@@ -302,13 +326,13 @@ nav ul li + li {
     font-size: 17px;
     color:#000000;
     text-align: left;
-  }
-  
-  input + input {
+}
+
+input + input {
     margin-top: 15px;
-  }
-  
-  input[type=button ]{
+}
+
+input[type=button ]{
     background-color: #000;
     height: 3rem;
     color: #fff;
@@ -326,32 +350,44 @@ nav ul li + li {
     margin-top: 1.3rem;
     margin-bottom: 2rem;
     float: left;
-  }
-  
-  input[type=button ]:hover {
+}
+
+input[type=button ]:hover {
     scale: 1.05;
     color: #fff;
-  }
-  
-  .contact-txt {
+}
+
+.contact-txt {
     margin-top: 3rem;
     margin-right: 10rem;
-  }
-  
-  .contact-txt i {
+}
+
+.contact-txt i {
     margin-right: 0.5rem;
     margin-bottom: 1rem;
-  }
-  
-  .contact-txt a {
-    color: #000000;
-  }
-  
-  .contact-txt a:hover {
-    color: #646464;
-  }
+}
 
-  /* ---------------------------- */
+.contact-txt a {
+    color: #000000;
+}
+
+.contact-txt a:hover {
+    color: #646464;
+}
+
+@media (max-width: 768px) {
+    #contact form {
+        float: none;
+        width: 100%;
+        margin-right: 0;
+    }
+
+    .contact-txt {
+        margin-right: 0;
+    }
+}
+
+/* ---------------------------- */
 /* Footer                       */
 /* ---------------------------- */
 .up {
@@ -369,7 +405,7 @@ nav ul li + li {
     margin-left: -1.25rem;
     display: flex;
 }
-  
+
 footer {
     background-color: #171717;
     width: 100%;
@@ -379,6 +415,7 @@ footer {
     padding-right: 8rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .icons a + a {
@@ -402,4 +439,20 @@ footer p {
 .icons {
     margin-top: 25px;
     margin-left: 170px;
+}
+
+@media (max-width: 768px) {
+    footer {
+        flex-direction: column;
+        height: auto;
+        padding: 1rem;
+    }
+
+    .icons {
+        margin: 1rem 0;
+    }
+
+    footer p {
+        margin: 1rem 0;
+    }
 }
